syntax = "proto3";

package iam.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/vera-byte/vgo-iam/internal/proto;iamv1";

service IAM {
  // 用户管理
  rpc CreateUser(CreateUserRequest) returns (User) {}
  rpc GetUser(GetUserRequest) returns (User) {}

  // 策略管理
  rpc CreatePolicy(CreatePolicyRequest) returns (Policy) {}
  rpc AttachUserPolicy(AttachUserPolicyRequest)
      returns (AttachUserPolicyResponse) {}

  // 访问密钥管理
  rpc CreateAccessKey(CreateAccessKeyRequest) returns (AccessKey) {}
  rpc ListAccessKeys(ListAccessKeysRequest) returns (ListAccessKeysResponse) {}
  rpc UpdateAccessKeyStatus(UpdateAccessKeyStatusRequest) returns (AccessKey) {}

  // 权限验证
  rpc VerifyAccessKey(VerifyRequest) returns (VerifyResponse) {}
  rpc CheckPermission(CheckPermissionRequest)
      returns (CheckPermissionResponse) {}
}

// 用户相关消息
message CreateUserRequest {
  string name = 1;
  string display_name = 2;
  string email = 3;
}

message GetUserRequest { string name = 1; }

message User {
  int64 id = 1;
  string name = 2;
  string display_name = 3;
  string email = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

// 策略相关消息
message CreatePolicyRequest {
  string name = 1;
  string description = 2;
  string policy_document = 3; // JSON字符串
}

message AttachUserPolicyRequest {
  string user_name = 1;
  string policy_name = 2;
}

message AttachUserPolicyResponse { bool success = 1; }

message Policy {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string policy_document = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

// 访问密钥相关消息
message CreateAccessKeyRequest { string user_name = 1; }

message ListAccessKeysRequest { string user_name = 1; }

message UpdateAccessKeyStatusRequest {
  string access_key_id = 1;
  string status = 2; // active/inactive
}

message AccessKey {
  string access_key_id = 1;
  string secret_access_key = 2; // 仅在创建时返回
  string status = 3;
  string user_name = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message ListAccessKeysResponse { repeated AccessKey access_keys = 1; }

// 验证相关消息
message VerifyRequest {
  string access_key_id = 1;
  string signature = 2;
  string request_data = 3; // 序列化的请求数据
  string timestamp = 4;    // ISO8601格式
}

message VerifyResponse {
  bool valid = 1;
  string user_name = 2;
}

message CheckPermissionRequest {
  string user_name = 1;
  string action = 2;
  string resource = 3;
}

message CheckPermissionResponse { bool allowed = 1; }